# bt2usb

./: .clippy.toml  .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
bt2usb/: .embed.toml  Cargo.toml  bt2usb.uf2  build.rs
bt2usb-cli/: Cargo.toml
bt2usb-cli/.cargo/: config.toml
bt2usb-cli/src/: main.rs  protocol.rs  transport.rs
bt2usb/.cargo/: config.toml
bt2usb/src/: ble_hid.rs  ble_state.rs  bonding.rs  device_profile.rs  framing.rs  main.rs  preferences.rs  protocol.rs  rpc.rs  rpc_log.rs  usb.rs  usb_hid.rs
bt2usb/src/ble/: commands.rs  connection.rs  gatt.rs  mod.rs
src/: device_profile.rs  framing.rs  main.rs  rpc.rs  rpc_log.rs  usb_hid.rs
v0.1.0/: index.html
web/: index.html
