[package]
name = "bt2usb-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bt2usb-cli"
path = "src/main.rs"

[dependencies]
hidapi = "2"
minicbor = { version = "0.25", features = ["std"] }
cobs = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
